CREATE EXTENSION IF NOT EXISTS "uuid-ossp";

CREATE TABLE users (
    id uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
    login TEXT NOT NULL UNIQUE,
    firstname TEXT NOT NULL,
    surname TEXT NOT NULL,
    email TEXT NOT NULL UNIQUE,
    phone TEXT,
    bio TEXT,
    password_hash TEXT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_users_login ON users(login);

-- CREATE TYPE user_role_type AS ENUM ('admin', 'moderator', 'approved_user', 'user');

-- CREATE TABLE user_roles (
--     id uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
--     user_id uuid NOT NULL REFERENCES users(id),
--     role user_role_type NOT NULL DEFAULT 'user',
--     assign_user_id uuid,  -- NULL indicates system-assigned
--     assigned_at TIMESTAMPTZ NOT NULL DEFAULT now()
-- );

CREATE TABLE user_sessions (
    id uuid PRIMARY KEY DEFAULT uuid_generate_v4(),
    user_id uuid NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    token TEXT NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    expires_at TIMESTAMPTZ NOT NULL,
    ip_address inet
);
